public/stylesheets/style.css
html, body {
    height: 100%;
}

html{
    overflow-y: scroll;
}

.templateContent {
    height: 100%;
    margin-top: 125px;
}

a {
    text-decoration: none;
}

a:hover {
    text-decoration: none;
}

.panel>a {
    color: black;
}

.heading-div{
    margin-bottom: 50px;
}

#bodyDiv-anchor {
    display: block;
    position: relative;
    top: -169px;
}


input,textarea {
    margin-bottom: 10px;
}

textarea{
    height:200px;
    width:100%;
}

.jobItemStyle {
    margin-top: 10px;
    border-bottom: 1px solid lightblue;
    padding-bottom: 10px;
}

.jobItemStyle:nth-of-type(1){
    /*margin-top: 0;*/
}

.jobItemImg {
    margin: 10px 10px;
}

.pageContent {
    margin-top: 40px;
}

#logoImg {
    height: 30px;
}

.nav {
    font-size: 18px;
    font-family: 'Nunito', sans-serif;
    line-height: 22px;
    font-weight: 500;
    text-transform: uppercase;

}

.nav li {
    position: relative;
    display: inline-block;
    margin: 0 10px;
    /*border: 1px solid black;*/
}

.nav li>a{
    position: relative;
    display: inline-block;
    color: black;
    background: none;
    height: 50px;
    line-height: 50px;
    padding:0 10px;
    margin:0;
}

.nav li>a:hover {
    background: none;
}

.nav .active::after, .nav li:hover::after {
    content: '';
    display: block;
    position: absolute;
    left: 0;
    bottom:-1px;
    width: 100%;
    height:3px;
    background: darkblue;
    z-index: 1;
}


.navbar {
    width: 100%;
    margin-bottom: 0;
    box-shadow: 0 0 5px rgba(0,0,0,.5);
}

.navbar-nav {
    background: none;
}

.navbarCustom {
    background: white;
}

.navList {
    list-style-position: inside;
    padding-left: 0;
    margin:0;
}

/*Global classes*/
.initialHidden {
    display: none;
}

.initialHiddenNav {
    visibility: hidden;
}

/*Main Page: host-featured section*/
.index_jumbo {
    display: block;
    position: relative;
    background: rgba(0,0,0,.5);
    width: 100%;
    height: 100%;
    margin-bottom: 0;
}

.index_jumbo::after {
    content: "";
    background: #FFF url("/uploads/jumbotron_image.jpg") no-repeat center;
    background-size: cover;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: -1;
}

.page-header {
    position: absolute;
    top: 400px;
    border-bottom: hidden;
    margin-top: 0;
}

.page-header>h2 {
    color: white;
    text-transform: uppercase;
    letter-spacing: .3px;
    font-weight: 400;
    margin-top: 0;
}

.page-header>h4 {
    color: beige;
    font-weight: 400;
}

#jumbo_down{
    position: absolute;
    top: 95%;
    right: 50%;
    font-size: 2em;
    color: white;
}

#jumbo_down:hover{
    color: rgba(255,255,255,.8);
}

/*Newest Orgs Carousel*/

.indexSectionHeader-col, .slide-controls-col {
    height: 50px;
}

.indexSectionHeader-col {
    margin-bottom: 15px;
}

.header-row {
    margin-top: 30px;
}

.indexSectionHeader h2{
    position: absolute;
    display: inline-block;
    bottom: 0px;
    margin-bottom: 0;
}

.slide-controls{
    position: absolute;
    display: inline-block;
    bottom: 0px;
    right: 15px;
}

@media screen and (max-width: 992px) {
    .indexSectionHeader h2 {
        position: static;
        text-align: center;
        width: 100%;
    }

    .slide-controls {
        position: static;
        text-align: center;
        width: 100%;
    }
}

@media screen and (min-width: 992px) {
    .carousel-inner > .item.next,
    .carousel-inner > .item.active.right {
        left: 0;
        -webkit-transform: translate3d(33%, 0, 0);
        transform: translate3d(33%, 0, 0);
    }
    .carousel-inner > .item.prev,
    .carousel-inner > .item.active.left {
        left: 0;
        -webkit-transform: translate3d(-33%, 0, 0);
        transform: translate3d(-33%, 0, 0);
    }
}

.left, .right {
    background-image: none;
    font-weight: 400;
    color: black;
}

.carousel_control:hover{
    color: rgba(0,0,0,.7);
}

.left:visited, .right:visited {
    color: black;
}

.carousel-inner img {
    object-fit: cover;
}

.customCaption {
    background: rgba(0,0,0,.9);
    margin-left: 15px;
    margin-right: 15px;
    padding-top: 0;
    padding-left: 15px;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    text-align: left;
    overflow: hidden;
    height: 50px;
    line-height: 25px;
    vertical-align: middle;
    text-overflow: ellipsis;
    white-space: normal;
}

.feedbackSVG {
    padding: 2px;
    position: absolute;
    top: 0;
    left: 15px;
    z-index: -1;
}



.feedbackDiv {
    margin: 0 15px;
    padding-bottom: 40px;
}

.feedbackItem{
    padding: 20px 0;
}

.customCaption>a{
    color: white;

}

.item-dim:hover .customCaption {
    top: 0;
    height: auto;
}

.item-dim:hover .customCaption>a{
    text-decoration: none;
}

.item-dim:hover .customCaption>p, .item-dim:hover .customCaption>.btn {
    display: inline-block;
}

/*Large devices menu - Animation is removed and menu is small initially*/
@media screen and (min-width: 992px) {
    #logoImg {
        height: 119px;
    }

    .nav li>a {
        height: 100px;
        line-height: 100px;
    }

    .templateContent {
        margin-top: 219px;
    }
}

/* Utility Classes */
.nopadding{
    padding:0;
}
.nomargin {
    margin: 0;
}

.noborder {
    border: none;
}

div{
    display:block;
}

/*newuser page*/

.nomargin-panel{
    margin: 0;
}

.panel-heading>.register-panel-heading>h4{
    display: inline-block;
    margin: 0 0;
    padding: 0;
    padding-left:20px;
    vertical-align: middle;

}

.panel-heading>.register-panel-heading:hover{
    background: white;
    opacity:.5;
    margin: 0;
    padding: 0;
    height:100%;
    width:100%;
}

/* ==============================Profile page===============================================================*/
/*Initially hide role-specific divs, then show with client-app.js based on user role*/
.orgDiv {
    display: none;
}

.volDiv {
    display: none;
}

.btn-enableFeedback{
    display: inline-block;
}

.btn-enableFeedbackLabel {
    white-space: nowrap;
}

.preUserInput {
    font: inherit;
    white-space: pre-wrap;
    word-break: normal;
    background: none;
    margin: 0;
    padding: 0;
    border: none;
}

.feedbackItem {
    padding-top: 10px;
    padding-bottom: 10px;
}
@media screen and (min-width: 992px) {
    .profileBtn:first-of-type {
        margin-right: 0;
        padding-right: 0;
    }

    .profileBtn:last-of-type {
        margin-left: 0;
        padding-left: 0;
    }
}

/*==============================Orglist page================================================================*/
.orglist-row{
    border-bottom: 1px solid lightblue;
    padding-top: 10px;
    padding-bottom: 10px;
}

.orglist-row:first-of-type{
    border-top: 1px solid lightblue;
}

/*==============================Messages================================================================*/
.messageDiv{
    border-bottom: 1px solid lightblue;
}

.messageDiv:last-of-type,
.messageDiv:first-of-type{
    border-bottom: none;
}

.user-featured-image {
    overflow-y: hidden;
}

